--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="description" content="Library Watch" />
   <meta name="application-name" content="Library Watch" />
-  <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages." />
+  <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages, StackOverflows's questions." />
   <meta name="url" content="https://zhnzhn.github.io/library-watch" />
   <title>Library Watch v0.10.0</title>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png" />
@@ -143,5 +143,5 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/lib_21c1e3040c43601ede99.js"></script><script type="text/javascript" src="app/app_61e8feda8272bcb4720d.js"></script></body>
+<script type="text/javascript" src="app/lib_c58dd2885d1ac473da61.js"></script><script type="text/javascript" src="app/app_27587cad3a290abcbad9.js"></script></body>
 </html>
