Add DnD actions styles for Watch Browser

--- a/index.html
+++ b/index.html
@@ -143,5 +143,6 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/lib_f25755bb59680e66c665.js"></script><script type="text/javascript" src="app/app_0b53b7b8b0f03a83295f.js"></script></body>
+<script type="text/javascript" src="app/lib_f25755bb59680e66c665.js"></script>
+<script type="text/javascript" src="app/app_113beb6e77d0de1633f1.js"></script></body>
 </html>
