--- a/index.html
+++ b/index.html
@@ -143,6 +143,5 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/lib_f25755bb59680e66c665.js"></script>
-<script type="text/javascript" src="app/app_1e4baca094cefabfe42b.js"></script></body>
+<script type="text/javascript" src="app/lib_84aaa47bc90d74908767.js"></script><script type="text/javascript" src="app/app_72642aa69eb1881f9e8d.js"></script></body>
 </html>
