Add search item for watch browser

--- a/index.html
+++ b/index.html
@@ -143,5 +143,9 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/lib_84aaa47bc90d74908767.js"></script><script type="text/javascript" src="app/app_72642aa69eb1881f9e8d.js"></script></body>
+<script type="text/javascript" src="app/manifest_ba550b87b866bd82562f.js"></script>
+<script type="text/javascript" src="app/lib_0817f42d24bb7bd61cfd.js"></script>
+<script type="text/javascript" src="app/app_58a6feed11f79bea0222.js"></script>
+
+</body>
 </html>
