--- a/index.html
+++ b/index.html
@@ -143,9 +143,5 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/manifest_ba550b87b866bd82562f.js"></script>
-<script type="text/javascript" src="app/lib_0817f42d24bb7bd61cfd.js"></script>
-<script type="text/javascript" src="app/app_58a6feed11f79bea0222.js"></script>
-
-</body>
+<script type="text/javascript" src="app/manifest_c51838a38a63ebaef8ec.js"></script><script type="text/javascript" src="app/lib_612db7ce0dd4dc8f1073.js"></script><script type="text/javascript" src="app/app_6b404b1bef1e728d878e.js"></script></body>
 </html>
