Add locale JSON File Backup/Load actions for Watch Items

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 }
   </style>
 
-  <link  href="css/app.css" rel="stylesheet" />
+  
+  <link rel="stylesheet" href="/css/app-2392031449.min.css">
+  
 
 
 </head>
@@ -143,5 +145,5 @@
    </noscript>
 
 
-<script type="text/javascript" src="app/manifest_c51838a38a63ebaef8ec.js"></script><script type="text/javascript" src="app/lib_612db7ce0dd4dc8f1073.js"></script><script type="text/javascript" src="app/app_6b404b1bef1e728d878e.js"></script></body>
+<script type="text/javascript" src="app/manifest_e8a14d4029fa534f77a1.js"></script><script type="text/javascript" src="app/lib_0456ea45335f4deb6593.js"></script><script type="text/javascript" src="app/app_c12cb1a07706eed7cf3a.js"></script></body>
 </html>
