--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </style>
 
   
-  <link rel="stylesheet" href="/css/app-2392031449.min.css">
+  <link rel="stylesheet" href="/library-watch/css/app-2392031449.min.css">
   
 
 
