--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 }
   </style>
 
-  
-  <link rel="stylesheet" href="css/app-6756818291.min.css">
-  
+
+  <link rel="stylesheet" href="/css/app-c7fac24aac.min.css">
+
 
 
 </head>
@@ -153,6 +153,27 @@
       </div>
    </noscript>
 
+<script type="text/javascript" src="app/manifest_f9fa95a54a8601c8fad5.js"></script>
+<script type="text/javascript" src="app/lib_7864db9208dfe84fe562.js"></script>
+<script type="text/javascript" src="app/app_d31da1c3ccb44f5b7250.js"></script>
 
-<script type="text/javascript" src="app/manifest_4a1f729a1057ffd994fd.js"></script><script type="text/javascript" src="app/lib_0456ea45335f4deb6593.js"></script><script type="text/javascript" src="app/app_082f059fefb6b7ae8ba6.js"></script></body>
+<!-- Google Analytics -->
+ <script>
+  if ( window && window.location.href.indexOf("https://zhnzhn.github.io/library-watch") > -1){
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create' , 'UA-87123545-1', {
+          'cookieDomain' : 'zhnzhn.github.io/library-watch',
+          'cookieExpires' : 0
+    });
+    ga('set', 'anonymizeIp', true);
+    ga('send', 'pageview');
+  }
+</script>
+<!-- Google Analytics -->
+
+</body>
 </html>
