--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </style>
 
 
-  <link rel="stylesheet" href="css/app-c7fac24aac.min.css">
+  <link rel="stylesheet" href="/css/app-c7fac24aac.min.css">
 
 
 
@@ -153,11 +153,11 @@
       </div>
    </noscript>
 
-<script type="text/javascript" src="app/manifest_f9fa95a54a8601c8fad5.js"></script>
-<script type="text/javascript" src="app/lib_7864db9208dfe84fe562.js"></script>
-<script type="text/javascript" src="app/app_d31da1c3ccb44f5b7250.js"></script>
+<script type="text/javascript" src="app/manifest_cd3714aa12ab4137834e.js"></script>
+<script type="text/javascript" src="app/lib_fc7441f7ac63befae317.js"></script>
+<script type="text/javascript" src="app/app_1aa6b5c8cd958e008c0c.js"></script>
 
-<!-- Google Analytics -->
+   <!-- Google Analytics -->
  <script>
   if ( window && window.location.href.indexOf("https://zhnzhn.github.io/library-watch") > -1){
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -165,7 +165,8 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create' , 'UA-87123545-1', {          
+    ga('create' , 'UA-87123545-1', {
+          'cookieDomain' : 'zhnzhn.github.io/library-watch',
           'cookieExpires' : 0
     });
     ga('set', 'anonymizeIp', true);
