Add button save to header bar

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 }
   </style>
 
-  
+
   <link rel="stylesheet" href="css/app-c7fac24aac.min.css">
-  
+
 
 
 </head>
@@ -153,6 +153,10 @@
       </div>
    </noscript>
 
+<script type="text/javascript" src="app/manifest_3116be01a4d4d8f14aa1.js"></script>
+<script type="text/javascript" src="app/lib_95a4799a7d28d51408f8.js"></script>
+<script type="text/javascript" src="app/app_cfef9e73bb872165a9ee.js"></script>
+
    <!-- Google Analytics -->
  <script>
   if ( window && window.location.href.indexOf("https://zhnzhn.github.io/library-watch") > -1){
@@ -171,6 +175,5 @@
 </script>
 <!-- Google Analytics -->
 
-
-<script type="text/javascript" src="app/manifest_6d009d253c54e78eab69.js"></script><script type="text/javascript" src="app/lib_538b1d897acbe3dde890.js"></script><script type="text/javascript" src="app/app_565ee2f2a21570ae723b.js"></script></body>
+</body>
 </html>
