--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
   </style>
 
-  <link rel="stylesheet" href="css/app-570ee3c9a9.min.css" onload="preloader.done(2)" onerror="preloader.errCss()">
+  <link rel="stylesheet" href="css/app-2a54e3b7a6.min.css">
 
 </head>
 <body>
@@ -214,7 +214,7 @@
           <p>It seems JavaScript in your browser disabled or not supported.</p>
           <br/>
           <p>
-           Library Watch is a SPA RESTFul client. With it, you can view information
+           Library Watch is a SPA RESTful client. With it, you can view information
            about GitHub's repositories, NPM's packages, StackOverflows's questions.
           </p>
           <br/>
@@ -223,9 +223,9 @@
       </div>
    </noscript>
 
-    <script src="app/manifest_d844fd091b54981268cd.js" onload="preloader.done(1)" onerror="preloader.errScript()"></script>
-    <script src="app/lib_e434b8e8d0810c93fb60.js" onload="preloader.done(70)" onerror="preloader.errScript()"></script>
-    <script src="app/app_dee70f3e145f9d989638.js" onload="preloader.done(26)" onerror="preloader.errScript()"></script>
+  <script src="app/manifest_4f2c5c119c15f01c5d01.js" onload="preloader.done(1)" onerror="preloader.errScript()"></script>
+  <script src="app/lib_f8ae88c48bc2579b226f.js" onload="preloader.done(70)" onerror="preloader.errScript()"></script>
+  <script src="app/app_1257a14a603b6e64706b.js" onload="preloader.done(26)" onerror="preloader.errScript()"></script>
 
    <script>if(preloader && preloader.isErrScript){preloader.stop();}</script>
 
