Add mobile-drag-drop polyfill

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 .add('lib/es6-promise.min.js')
                 .add('lib/fetch.min.js');
       }
+      if (!("ondragstart" in document.documentElement)
+          || !("draggable" in document.documentElement)) {
+        polyfill.add('lib/mobile-drag-drop.min.js')
+      }
       if (!Array.isArray) {
         Array.isArray = function(arg) {
            return Object.prototype.toString.call(arg) === '[object Array]';
@@ -176,7 +180,7 @@
 
   </style>
 
-  <link rel="stylesheet" href="css/app-aa989c49ee.min.css">
+  <link rel="stylesheet" href="css/app-116add442d.min.css">
 
 
 </head>
@@ -237,7 +241,7 @@
       </div>
    </noscript>
    <script src="app/lib_e8af10520440177c9db4.js" defer></script>
-   <script src="app/app_1df46ba34287a42b3e07.js" defer></script>    
+   <script src="app/app_d3b75ed2bb3bdbd0642a.js" defer></script>
 
 </body>
 </html>
