--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
 }
 
   </style>
-
+  
   <link rel="stylesheet" href="css/app-b0ea2695c3.min.css">
+  
 
 </head>
 <body>
@@ -217,6 +218,7 @@
    <div id="app">
    </div>
 
+   <!--googleoff: snippet-->
    <noscript>
       <div class="noscript__root">
         <div class="noscript__header">
@@ -234,8 +236,10 @@
         </div>
       </div>
    </noscript>
-   <script src="app/lib_b3f670886528a5f8be76.js" defer></script>
-   <script src="app/app_7ae0ba4163e88020099b.js" defer></script>
+   <!--googleoff: snippet-->
+   
+  <script src="app/lib_097e83378906922e9a05.js" defer></script> 
+  <script src="app/app_230af2a2a12f2d390887.js" defer></script>    
 
 </body>
 </html>
