--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 }
 
   </style>
-  
-  <link rel="stylesheet" href="/css/app-b0ea2695c3.min.css">
-  
+
+  <link rel="stylesheet" href="css/app-b0ea2695c3.min.css">
+
 
 </head>
 <body>
@@ -237,11 +237,9 @@
       </div>
    </noscript>
    <!--googleoff: snippet-->
-   
-  <script src="app/lib_bb6de9ebd6b96db4933d.js" defer></script>
- 
-      <script src="app/app_c22a10aa2f6e8674111d.js" defer></script>
-    
+
+  <script src="app/lib_bb6de9ebd6b96db4933d.js" defer></script> 
+  <script src="app/app_2843e63b860f2b08d33d.js" defer></script>
 
 </body>
 </html>
