--- a/index.html
+++ b/index.html
@@ -107,21 +107,13 @@
   {
     width: 2.5em;
     height: 2.5em;
-   -webkit-animation: circle infinite 1.25s linear;
-      -moz-animation: circle infinite 0.75s linear;
-        -o-animation: circle infinite 1.25s linear;
-           animation: circle infinite 1.25s linear;
-   border: 3px solid rgba(164, 135, 212, 1);
+    -o-animation: circle infinite 1.25s linear;
+    animation: circle infinite 1.25s linear;
+   border: 3px solid #009ae5;
    border-top-color: transparent;
    border-radius: 100%;
  }
-@-webkit-keyframes circle
-{ 100% {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-} }
-@-moz-keyframes circle
-{ 100% { transform: rotate(360deg);}}
+
 @-o-keyframes circle
 { 100% {
   -o-transform: rotate(360deg);
@@ -175,7 +167,7 @@
 
   </style>
 
-  <link rel="stylesheet" href="css/app-b0ea2695c3.min.css">
+  <link rel="stylesheet" href="css/app-30e7c2180d.min.css">
 
 
 </head>
@@ -238,8 +230,8 @@
    </noscript>
    <!--googleoff: snippet-->
 
-  <script src="app/lib_bb6de9ebd6b96db4933d.js" defer></script>
-  <script src="app/app_d49a7459164d6396c763.js" defer></script>    
+   <script src="app/lib_80320c8ace262a56854d.js" defer></script>
+   <script src="app/app_f142e8065d1c0845f2cc.js" defer></script>    
 
 </body>
 </html>
