--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }</script>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png">
   <base target="_blank">
-
+  
   <script>
     ;(function(){
       var polyfill = {
@@ -165,19 +165,12 @@
 }
 
   </style>
-  <link rel="stylesheet" href="css/app-3336bf096c.min.css">
+  <link rel="stylesheet" href="css/app-c9452f6b99.min.css">  
 
 </head>
 <body>
 
-  <!--googleoff: snippet-->
-  <noscript>
-    <style type="text/css">
-     #spinner {
-       display: none;
-     }
-    </style>
-  </noscript>
+  <!--googleoff: snippet-->  
   <div id="preloader" class="wrapper">
       <div id="circle" data-loader="circle" class="wrapper__loading"></div>
       <div class="wrapper__descr">
@@ -207,28 +200,39 @@
    <div id="app">
    </div>
 
-   <!--googleoff: snippet-->
+   <!--googleoff: snippet--> 
    <noscript>
+      <style>
+       #preloader {
+         display: none;
+       }
+      </style> 
       <div class="noscript__root">
         <div class="noscript__header">
-           <h1 class="noscript__caption">Library Watch</h1>
+           <h1 class="noscript__caption">Web app Library Watch</h1>
         </div>
         <div class="noscript__msg">
           <p>It seems JavaScript in your browser disabled or not supported.</p>
           <br/>
           <p>
-           Library Watch is a SPA RESTful client. With it, you can view information
+           Web app Library Watch is a SPA RESTful client. With the help of the app you can explore information
            about GitHub's repositories, NPM's packages, StackOverflows's questions.
           </p>
           <br/>
-          <p>To use <a class="noscript__link" href=".">Library Watch</a>, please, enable and reload page.</p>
+          <p>To use <a class="noscript__link" href=".">Library Watch</a>, please, enable JavaScript and reload page.</p>
         </div>
       </div>
    </noscript>
    <!--googleoff: snippet-->
 
-  <script src="app/lib_8abfd3730e39e5373f90.js" defer></script>
-  <script src="app/app_e012241089a3b13b9d6e.js" defer></script>    
+
+ 
+      <script src="app/lib_8abfd3730e39e5373f90.js" defer></script>
+       
+   
+ 
+      <script src="app/app_e012241089a3b13b9d6e.js" defer></script>
+    
 
 </body>
 </html>
