--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ https://api.npms.io
 https://api.stackexchange.com
 https://gs.statcounter.com
 https://bundlephobia.com;
+object-src 'none';
 form-action 'none'; 
 require-trusted-types-for 'script';"
   >
@@ -89,7 +90,7 @@ require-trusted-types-for 'script';"
        return obj;
     })(4);
   </script>  
-
+  
   <style>
   [data-loader='circle']
   {
@@ -162,7 +163,7 @@ require-trusted-types-for 'script';"
 }
 
   </style>
-  <link rel="stylesheet" href="css/app-c9452f6b99.min.css">  
+  <link rel="stylesheet" href="css/app-91563c3375.min.css">  
 
 </head>
 <body>
@@ -203,7 +204,7 @@ require-trusted-types-for 'script';"
        #preloader {
          display: none;
        }
-      </style> 
+      </style>
       <div class="noscript__root">
         <div class="noscript__header">
            <h1 class="noscript__caption">Web app Library Watch</h1>
@@ -222,8 +223,8 @@ require-trusted-types-for 'script';"
    </noscript>
    <!--googleoff: snippet-->
  
-   <script src="app/lib_8abfd3730e39e5373f90.js" defer></script>         
-   <script src="app/app_bb1cba81e7f2c1e13e37.js" defer></script>    
+   <script src="app/lib_8abfd3730e39e5373f90.js" defer></script>          
+   <script src="app/app_ef3fdf26e3a1a1b53da9.js" defer></script>    
 
 </body>
 </html>
